# GDSR-Studio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DESCRIPTION.md  README.md  mod.json
src/: main.cpp
src/capture/: AngleD3D11Backend.cpp  AngleD3D11Backend.hpp  AudioCapture.cpp  AudioCapture.hpp  CaptureScheduler.cpp  CaptureScheduler.hpp  OpenGLBlockingBackend.cpp  OpenGLBlockingBackend.hpp  Recorder.cpp  Recorder.hpp
src/imgui_hook/: ImGuiManager.cpp  ImGuiManager.hpp
src/ui/: Localization.cpp  Localization.hpp  StudioState.hpp  StudioUI.cpp  StudioUI.hpp
